fix overflow

--- a/src/Screens/Home/Home.scss
+++ b/src/Screens/Home/Home.scss
@@ -48,7 +48,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 80%;
   height: calc(100vh - 5rem);
   transform: rotate(-45deg);
   color: $primary-color-hover;
